# django-dcat

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg
dcat/: admin.py  apps.py  models.py
dcat/management/commands/: dump_from_datajson.py  import_filetypes.py  import_from_datajson.py  import_licences.py
dcat/migrations/: 0001_initial.py  0002_alter_agent_type_alter_distribution_file_and_more.py  0002_rename_license_catalog_licence_and_more.py  0003_catalog_homepage.py  0003_checksum_distribution_checksum.py  0004_alter_catalog_themes_alter_dataset_description_and_more.py  0004_alter_distribution_checksum.py  0005_keyword_dataset_keywords.py  0006_alter_datatheme_code.py  0007_dataset_issued_dataset_modified.py  0008_dataservice.py  0009_alter_agent_type.py  0010_dataset_landing_page.py  0011_alter_distribution_file.py  0012_distribution_external_access_url.py  0013_alter_catalog_licence.py  0014_alter_agent_mbox_alter_agent_name_alter_agent_type_and_more.py
tests/: test_dcat_feed.py  test_dcat_jsonld_serialization.py  test_settings.py
